# qira-ocr

./: .gitignore  README.md  pyproject.toml
src/qira_ocr/: __init__.py  api.py  cli.py  loader.py  result.py  router.py  structure.py
src/qira_ocr/engines/: __init__.py  base.py  paddle.py  qari.py  surya.py
tests/: conftest.py  test_api.py  test_cli.py  test_engines.py  test_loader.py  test_ocr.py  test_result.py  test_router.py  test_structure.py
